# Noma

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LANGUAGE_GUIDE.md  README.md
demo_self_growing_xor/: README.md  config.json
demo_self_growing_xor/assets/: expected_terminal_output.txt
demo_self_growing_xor/baselines/cpp_manual/: build.sh  xor.cpp
demo_self_growing_xor/cpp/: baseline_xor  baseline_xor.cpp
demo_self_growing_xor/noma/: xor.noma  xor_bench.noma  xor_reset.noma
demo_self_growing_xor/python/: baseline_xor.py  benchmark.py  init_gen.py  plot_comparison.py  plot_loss.py  summarize.py
demo_self_growing_xor/scripts/: clean_out.sh  count_loc.sh  make_plot.sh  run_all.sh  run_cpp.sh  run_noma.sh  run_python.sh
examples/: 17_dynamic_alloc.noma  18_dynamic_network.noma  20_growing_network.noma  21_rng_init.noma  22_adam_optimizer.noma  23_rmsprop_optimizer.noma  24_optimizer_comparison.noma  30_jupyter_features.noma  linear_regression.noma  simple.noma  simple_tensor_test.noma  test_tokens.noma  xor.noma
noma-vscode/: CHANGELOG.md  INSTALL.md  README.md  package.json
noma-vscode/snippets/: noma.json
noma-vscode/src/: extension.ts
noma-vscode/syntaxes/: noma.tmLanguage.json
notebook/: README.md  setup.py  test_noma_magic.py
notebook/examples/: 01_getting_started.ipynb  02_neural_networks.ipynb  03_advanced.ipynb
notebook/noma_magic/: __init__.py  magic.py
src/: ast.rs  error.rs  graph.rs  lexer.rs  lib.rs  llvm_codegen.rs  main.rs  nvptx_host.rs  parser.rs  ptx_codegen.rs  token.rs
(+4 files in other folders)
