[package]
name = "noma"
version = "0.1.0"
edition = "2021"
authors = ["NOMA Contributors"]
description = "Neural-Oriented Machine Architecture - A systems language with native differentiation"
license = "MIT"
repository = "https://github.com/noma-lang/noma"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "noma"
path = "src/main.rs"

[lib]
name = "noma_compiler"
path = "src/lib.rs"
